--- a/CarShop/Views/Car/GetCarById.cshtml
+++ b/CarShop/Views/Car/GetCarById.cshtml
@@ -1,4 +1,4 @@
-﻿@model CarShop.Domain.Entity.Car
+﻿@model CarShop.Domain.ViewModel.Car.CarViewModel
 
 @{
     ViewBag.Title = "title";
@@ -15,7 +15,7 @@
         <div class="col-md-4">
             <div class="card-body">
                 <h5 class="card-title text-center">@Model?.Name</h5>
-                <p class="card-text"><b>Описание: </b>@Model?.Descroptions</p>
+                <p class="card-text"><b>Описание: </b>@Model?.Description</p>
                 <p class="card-text"><b>Стоимость: </b>@Model?.Price ₽</p>
                 <p class="card-text"><b>Тип: </b>@Model?.TypeCar</p>
                 <p class="card-text"><b>Модель: </b>@Model.Model</p>
@@ -24,7 +24,7 @@
         </div>
         <div class="col-md-4">
             <div class="card-body">
-                <p class="card-text"><b>Описание: </b>@Model?.Descroptions</p>
+                <p class="card-text"><b>Описание: </b>@Model?.Description</p>
             </div>
         </div>
     </div>
