--- a/CarShop/Views/Car/Save.cshtml
+++ b/CarShop/Views/Car/Save.cshtml
@@ -32,8 +32,8 @@
                         <input asp-for="Speed" class="form-control" type="text">
                     </div>
                     <div class="form-group">
-                        <label asp-for="Descroptions"></label>
-                        <textarea asp-for="Descroptions" class="form-control"></textarea>
+                        <label asp-for="Description"></label>
+                        <textarea asp-for="Description" class="form-control"></textarea>
                     </div>
                     <div class="input-group mb-3">
                         <span class="input-group-text">₽</span>
